--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,13 @@
 set-window-option -g mode-keys vi
 
-# Apply Tc
-#set-option -ga terminal-overrides ",alacritty:Tc"
+bind j display-popup -w 100% -h 100% -B -E "\
+    tmux list-windows -a -F '#{session_name}:#{window_index} #{window_name}' |\
+    fzf --nth 2 --header jump-to-window --preview-window up,50%,border-bottom,follow --preview 'tmux capture-pane -e -p -t {1}' |\
+    awk '{print $1}' |\
+    xargs tmux switch-client -t"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 run '~/.tmux/plugins/tpm/tpm'
-
